[workspace]
members = [
    "cli",
    "core",
    "derive",
    "eval",
    "helper",
    "primitives",
    "prover",
    "recursion/circuit",
    "recursion/compiler",
    "recursion/core",
    "recursion/program",
    "sdk",
    "zkvm/*", "tutorials",
]
exclude = ["examples/target"]
resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]
# Plonky3 dependencies
p3-air = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-field = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-commit = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-matrix = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-baby-bear = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-util = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-challenger = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-dft = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-fri = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-goldilocks = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-keccak = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-keccak-air = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-blake3 = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-mds = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-merkle-tree = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-poseidon2 = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-symmetric = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-uni-stark = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-maybe-rayon = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-bn254-fr = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "bfd0fda" }
anstyle = "1.0.6"
anyhow = "1.0.80"
arrayref = "0.3.6"
async-trait = "0.1.77"
axum = "=0.7.5"
backtrace = "0.3.71"
bincode = "1.3.3"
blake3 = "1.5"
cargo_metadata = "0.18.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", default-features = false }
clap = "4.5.4"
criterion = "0.5.1"
csv = "1.3.0"
curve25519-dalek = "4.1.2"
dotenv = "0.15.0"
elf = "0.7.4"
elliptic-curve = "0.13.8"
ff = "0.13"
futures = "0.3.30"
futures-util = "0.3.14"
getrandom = "0.2.14"
hashbrown = "0.14.3"
hex = "0.4.3"
home = "0.5.9"
hybrid-array = "0.2.0-rc"
indicatif = "0.17.8"
itertools = "0.12.1"
k256 = "0.13.3"
lazy_static = "1.4.0"
libm = "0.2.8"
log = "0.4.21"
nohash-hasher = "0.2.0"
num = "0.4.2"
num_cpus = "1.16.0"
once_cell = "1.8.0"
proc-macro2 = "1.0"
prost = "0.12"
quote = "1.0"
rand = "0.8.5"
rayon = "1.10.0"
rayon-scan = "0.1.1"
reqwest = { version = "0.12.3", default-features = false }
reqwest-middleware = "0.2.5"
rrs-lib = { git = "https://github.com/GregAC/rrs.git" }
serde = "1.0.197"
serde_json = { version = "1.0.116", default-features = false }
serde_with = "3.7.0"
serial_test = "3.0.0"
sha2 = "0.10.8"
size = "0.4.1"
strum = "0.26.2"
strum_macros = "0.26.2"
syn = "1.0"
target-lexicon = "0.12.13"
tempfile = "3.9.0"
thiserror = "1.0.58"
tiny-keccak = "2.0.2"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-forest = "0.1.6"
tracing-subscriber = "0.3.17"
twirp = { git = "https://github.com/github/twirp-rs.git" }
typenum = "1.17.0"
vergen = { version = "8", default-features = false }
yansi = "1.0.1"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2" }
bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm" }


[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
overflow-checks = true
lto = "thin"
incremental = false
codegen-units = 16

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wormhole-foundation/wp1"

