[package]
name = "wp1-cli"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "git2"] }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
home = { workspace = true }
wp1-prover = { path = "../prover" }
wp1-sdk = { path = "../sdk" }
wp1-core = { path = "../core" }
reqwest = { workspace = true, features = [
    "stream",
    "json",
    "default-tls",
], default-features = false }
futures-util = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
serde_json = { workspace = true }
yansi = { workspace = true }
hex = { workspace = true }
anstyle = { workspace = true }
target-lexicon = { workspace = true }
dialoguer = { workspace = true }
tempfile = { workspace = true }
