[package]
name = "sphinx-cli"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "git2"] }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
sphinx-prover = { workspace = true }
sphinx-sdk = { workspace = true }
sphinx-core = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json", "rustls-tls"] }
futures-util = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true, features = ["full"] }
home = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
serde_json = { workspace = true }
yansi = { workspace = true }
hex = { workspace = true }
anstyle = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
