[package]
name = "wp1-core"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
elf = "0.7.4"
itertools = "0.12.0"
lazy_static = "1.4"
log = "0.4.20"
nohash-hasher = "0.2.0"
num = { version = "0.4.2" }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-blake3 = { workspace = true, features = ["parallel"] }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-keccak = { workspace = true }
p3-keccak-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-mds = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }
rrs-lib = { git = "https://github.com/GregAC/rrs.git" }
wp1-derive = { path = "../derive" }
wp1-zkvm = { path = "../zkvm/entrypoint" }

anyhow = "1.0.79"
amcl = { package = "snowbridge-amcl", version="1.0.2", default-features = false, features = ["bls381"]}
blake3 = "1.5"
cfg-if = "1.0.0"
generic-array = { version = "1.0.0", features = ["alloc"] }
typenum = "1.17.0"
curve25519-dalek = { version = "4.1.2" }
elliptic-curve = "0.13.8"
hashbrown = "0.14.3"
hex = "0.4.3"
hybrid-array = "0.2.0-rc"
k256 = { version = "0.13.3", features = ["expose-field"] }
num_cpus = "1.16.0"
serde_with = "3.7.0"
serde_json = { version = "1.0.116", default-features = false, features = [
  "alloc",
] }
size = "0.4.1"
tempfile = "3.9.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tracing = "0.1.40"
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
strum_macros = "0.26.2"
strum = "0.26.2"
rayon-scan = "0.1.1"
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.5.1"
num = { version = "0.4.2", features = ["rand"] }
rand = "0.8.5"

[features]
debug = []
default = ["avx512"]
keccak = []
neon = ["p3-blake3/neon"]
serial = []
avx512 = ["p3-baby-bear/nightly-features"]

[[bench]]
harness = false
name = "fibonacci"

[[bench]]
harness = false
name = "main"

[lib]
bench = false
