[package]
name = "sphinx-core"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
elf = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
nohash-hasher = { workspace = true }
num = { workspace = true }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-blake3 = { workspace = true, features = ["parallel"] }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-keccak = { workspace = true }
p3-keccak-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }
rrs-lib = { workspace = true }
sphinx-derive = { path = "../derive" }
sphinx-primitives = { path = "../primitives" }

anyhow = { workspace = true }
arrayref = { workspace = true }
blake3 = { workspace = true }
bls12_381 = { workspace = true }
cfg-if = { workspace = true }
curve25519-dalek = { workspace = true }
elliptic-curve = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
hybrid-array = { workspace = true }
k256 = { workspace = true, features = ["expose-field"] }
num_cpus = { workspace = true }
serial_test = { workspace = true }
serde_with = { workspace = true }
size = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
tracing-texray = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
web-time = { workspace = true }
rayon-scan = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tiny-keccak = { workspace = true, features = ["keccak"] }
criterion = { workspace = true }
num = { workspace = true, features = ["rand"] }
rand = { workspace = true }
sphinx-zkvm = { path = "../zkvm/entrypoint" }

[features]
debug = []
default = ["avx512"]
keccak = []
neon = ["p3-blake3/neon"]
serial = []
avx512 = ["p3-baby-bear/nightly-features"]
icicle = []

[[bench]]
harness = false
name = "fibonacci"

[[bench]]
harness = false
name = "main"

[lib]
bench = false
doctest = false
