[package]
name = "sphinx-eval"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sphinx-core = { path = "../core" }
sphinx-prover = { path = "../prover" }

clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
serde = { workspace = true }
