[package]
name = "sphinx-eval"
version = "1.0.0-rc.1"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sphinx-core = { path = "../core" }
sphinx-prover = { path = "../prover" }

clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
serde = { workspace = true }
