[package]
name = "sphinx-eval"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sphinx-core = { workspace = true }
sphinx-prover = { workspace = true }

clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
serde = { workspace = true }
