[workspace]
members = [
  "aggregation/script",
  "bls12381-pairing/script",
  "chess/script",
  "cycle-tracking/script",
  "fibonacci/script",
  "io/script",
  "is-prime/script",
  "json/lib",
  "json/script",
  "regex/script",
  "rsa/script",
  "ssz-withdrawals/script",
  "tendermint/script",
]
resolver = "2"