[workspace]
members = [
  "aggregation/script",
  "bls12381-pairing/script",
  "chess/script",
  "cycle-tracking/script",
  "fibonacci/script",
  "fibonacci64/script",
  "io/script",
  "is-prime/script",
  "json/lib",
  "json/script",
  "regex/script",
  "rsa/script",
  "ssz-withdrawals/script",
  "tendermint/script",
  "patch-testing/script",
]
resolver = "2"
