[workspace]
members = [
  "aggregation/script",
  "bls12381-pairing/script",
  "chess/script",
  "cycle-tracking/script",
  "fibonacci/script",
  "fibonacci64/script",
  "io/script",
  "is-prime/script",
  "json/lib",
  "json/script",
  "lcs/script",
  "lcs2/script",
  "patch-testing/script",
  "regex/script",
  "rsa/script",
  "ssz-withdrawals/script",
  "sum/script",
  "tendermint/script",
]
resolver = "2"
