[package]
name = "wp1-helper"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.18.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
