[package]
name = "sphinx-primitives"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lazy_static = { workspace = true }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
itertools = { workspace = true }
