[package]
name = "wp1-prover"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wp1-recursion-program = { path = "../recursion/program" }
wp1-recursion-circuit = { path = "../recursion/circuit" }
wp1-recursion-compiler = { path = "../recursion/compiler" }
wp1-recursion-core = { path = "../recursion/core" }
wp1-recursion-gnark-ffi = { path = "../recursion/gnark-ffi" }
wp1-core = { path = "../core" }
wp1-primitives = { path = "../primitives" }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-commit = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
backtrace = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
size = { workspace = true }
home = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["rustls-tls", "trust-dns", "stream"] }
indicatif = { workspace = true }
futures = { workspace = true }
subtle-encoding = { workspace = true }
serial_test = { workspace = true }

[[bin]]
name = "fibonacci_sweep"
path = "scripts/fibonacci_sweep.rs"

[[bin]]
name = "tendermint_sweep"
path = "scripts/tendermint_sweep.rs"

[[bin]]
name = "fibonacci_groth16"
path = "scripts/fibonacci_groth16.rs"

[[bin]]
name = "build_groth16"
path = "scripts/build_groth16.rs"

[features]
neon = ["wp1-core/neon"]
