[package]
name = "sphinx-prover"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sphinx-recursion-program = { path = "../recursion/program" }
sphinx-recursion-circuit = { path = "../recursion/circuit" }
sphinx-recursion-compiler = { path = "../recursion/compiler" }
sphinx-recursion-core = { path = "../recursion/core" }
sphinx-recursion-gnark-ffi = { path = "../recursion/gnark-ffi" }
sphinx-core = { path = "../core" }
sphinx-primitives = { path = "../primitives" }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-commit = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
backtrace = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
size = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["rustls-tls", "trust-dns", "stream"] }
indicatif = { workspace = true }
futures = { workspace = true }
subtle-encoding = { workspace = true }
serial_test = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "build_plonk_bn254"
path = "scripts/build_plonk_bn254.rs"

[[bin]]
name = "e2e"
path = "scripts/e2e.rs"

[features]
default = ["plonk"]

neon = ["sphinx-core/neon"]
plonk = ["sphinx-recursion-gnark-ffi/plonk"]
