[package]
name = "sphinx-prover"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sphinx-recursion-program = { workspace = true }
sphinx-recursion-circuit = { workspace = true }
sphinx-recursion-compiler = { workspace = true }
sphinx-recursion-core = { workspace = true }
sphinx-recursion-gnark-ffi = { workspace = true }
sphinx-core = { workspace = true }
sphinx-primitives = { workspace = true }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-commit = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
backtrace = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
sha2 = { workspace = true }
hex = { workspace = true }
home = { workspace = true }
anyhow = { workspace = true }
size = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["rustls-tls", "trust-dns", "stream"] }
indicatif = { workspace = true }
futures = { workspace = true }
subtle-encoding = { workspace = true }
serial_test = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "build_plonk_bn254"
path = "scripts/build_plonk_bn254.rs"

[[bin]]
name = "e2e"
path = "scripts/e2e.rs"

[features]
neon = ["sphinx-core/neon"]
plonk = ["sphinx-recursion-gnark-ffi/plonk"]
