[package]
name = "sphinx-sdk"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
twirp = { workspace = true }
async-trait = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest = { workspace = true, features = ["default-tls", "trust-dns", "stream"] }
anyhow = { workspace = true }
sphinx-prover = { path = "../prover" }
sphinx-core = { path = "../core" }
futures = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["full"] }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
alloy = { workspace = true, features = ["contract", "signer-wallet"] }
sha2 = { workspace = true }
tempfile = { workspace = true }
num-bigint = { workspace = true }

[features]
neon = ["sphinx-core/neon"]

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "git2"] }
