[package]
name = "sphinx-sdk"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
twirp = { workspace = true }
async-trait = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest = { workspace = true, features = ["default-tls", "trust-dns", "stream"] }
anyhow = { workspace = true }
sphinx-prover = { path = "../prover", default-features = false }
sphinx-core = { path = "../core" }
futures = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["full"] }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
num-bigint = { workspace = true }
cfg-if = { workspace = true }
ethers = { workspace = true }

[features]
neon = ["sphinx-core/neon"]
plonk = ["sphinx-prover/plonk"]

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "git2"] }
