[package]
edition = "2021"
name = "tutorials"
version = "0.1.0"

[dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
wp1-derive = { path = "../derive" }
wp1-core = { path = "../core" }
itertools = "0.12.1"
