[package]
name = "tutorials"
version = "1.0.0-rc.1"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-uni-stark = { workspace = true }
sphinx-derive = { path = "../derive" }
sphinx-core = { path = "../core" }
itertools = { workspace = true }
