[package]
name = "wp1-recursion-circuit"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
wp1-recursion-core = { path = "../core" }
wp1-core = { path = "../../core" }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wp1-recursion-derive = { path = "../derive" }
wp1-recursion-compiler = { path = "../compiler" }
wp1-recursion-program = { path = "../program" }
p3-bn254-fr = { workspace = true }
p3-baby-bear = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
ff = { workspace = true, features = ["derive", "derive_bits"] }
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
zkhash = { workspace = true }
rand = { workspace = true }
wp1-recursion-groth16-ffi = { path = "../groth16-ffi" }
