[package]
name = "sphinx-recursion-circuit"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
sphinx-recursion-core = { workspace = true }
sphinx-core = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sphinx-recursion-derive = { workspace = true }
sphinx-recursion-compiler = { workspace = true }
sphinx-recursion-program = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-baby-bear = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
ff = { workspace = true, features = ["derive", "derive_bits"] }
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
zkhash = { workspace = true }
rand = { workspace = true }
sphinx-recursion-gnark-ffi = { workspace = true }

[features]
plonk = ["sphinx-recursion-gnark-ffi/plonk"]
